fix artisant display

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ VITE_SUPABASE_PROJECT_ID="YOUR_PROJECT_REF"
 # Geoapify is used for autocomplete & reverse geocoding in LocationSearch
 VITE_GEOAPIFY_API_KEY="YOUR_GEOAPIFY_API_KEY"
 
+# Storage bucket used for all image uploads (avatars, portfolio, etc.)
+VITE_SUPABASE_STORAGE_BUCKET="public"
+
 # --- Backend/Edge Functions & Local Scripts ---
 # These are NOT loaded by Vite. Set them as environment variables
 # (e.g., export in your shell) and as Supabase Function secrets.
